--- a/src/base.ipynb
+++ b/src/base.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "8f7eb5b2",
    "metadata": {},
    "outputs": [
@@ -33,13 +33,13 @@
    ],
    "source": [
     "import loadData\n",
-    "df = loadData.load_data('../data/indexData.csv', 'IXIC')\n",
+    "df = loadData.load_data('IXIC')\n",
     "print(df.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "c32fdbfa",
    "metadata": {},
    "outputs": [
