--- a/reports/data_exploration.ipynb
+++ b/reports/data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "8f7eb5b2",
    "metadata": {},
    "outputs": [
@@ -32,8 +32,8 @@
     }
    ],
    "source": [
-    "import loadData\n",
-    "df = loadData.load_data('IXIC')\n",
+    "import data_loader\n",
+    "df = data_loader.load_data('IXIC')\n",
     "print(df.head())"
    ]
   },
