--- a/reports/data_exploration.ipynb
+++ b/reports/data_exploration.ipynb
@@ -2,26 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2a82cfa6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Added project root to path\n"
+     ]
+    }
+   ],
    "source": [
-    "import sys\n",
-    "import os\n",
-    "\n",
-    "current_dir = os.getcwd()\n",
-    "project_root = os.path.abspath(os.path.join(current_dir, '..'))\n",
-    "if project_root not in sys.path:\n",
-    "    sys.path.append(project_root)\n",
-    "\n",
+    "import project_setup\n",
     "import src.data_loader as data_loader\n",
     "import src.visualization as visualization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "8f7eb5b2",
    "metadata": {},
    "outputs": [
