modify the typo

--- a/reports/data_exploration.ipynb
+++ b/reports/data_exploration.ipynb
@@ -63,7 +63,7 @@
    "id": "e27f3fd3",
    "metadata": {},
    "source": [
-    "As we can see from the diagram, all the stock indices had been there since 2003-10-03, so we'll set October 04, 2024 as the cutoff date for comparison."
+    "As we can see from the diagram, all the stock indices had been there since 2003-10-03, so we'll set October 04, 2004 as the cutoff date for comparison in later step to visualize the stock indices growth comparison."
    ]
   },
   {
