refactor: Update markdown sections and execution counts in Euronext notebook

--- a/indices/euronext.ipynb
+++ b/indices/euronext.ipynb
@@ -244,25 +244,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55b88315",
+   "id": "6aa0417a",
    "metadata": {},
    "source": [
-    "# Data Cleaning\n",
-    "TBA"
+    "# 2. Model Training & Evaluation"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1b0673c2",
+   "id": "dcf9f205",
    "metadata": {},
    "source": [
-    "## Logisitic Regression"
+    "## 2.1 Initializing"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a72fb7ad",
+   "id": "a3fa1980",
    "metadata": {},
    "outputs": [
     {
@@ -285,8 +284,24 @@
     "df_eng, features = prep.prepare(stock_index_pattern='Euronext')\n",
     "\n",
     "# Setup time-series split (reused across all trainers)\n",
-    "ts_split = TimeSeriesSplit(test_size=0.2)\n",
-    "\n",
+    "ts_split = TimeSeriesSplit(test_size=0.2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b0673c2",
+   "metadata": {},
+   "source": [
+    "## 2.2. Logisitic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a72fb7ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Train LogisticRegression model using the trainer component\n",
     "trainer_lr = LogisticTrainer(features=features, solver='liblinear')\n",
     "X_train, X_test, y_train, y_test = trainer_lr.prepare_data(df_eng, ts_split)\n",
@@ -295,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e02669be",
    "metadata": {},
    "outputs": [
@@ -318,7 +333,7 @@
       " [[ 13 327]\n",
       " [ 20 400]]\n",
       "ROC AUC: 0.5088\n",
-      "Model saved to ..\\models\\logistic_model_euronext.pkl\n"
+      "Model saved to models/logistic_model_euronext.pkl\n"
      ]
     }
    ],
@@ -346,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d151aa5b",
    "metadata": {},
    "outputs": [],
@@ -359,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "6b4e070f",
    "metadata": {},
    "outputs": [
@@ -381,7 +396,8 @@
       "Confusion matrix:\n",
       " [[164 176]\n",
       " [227 193]]\n",
-      "Model saved to ..\\models\\knn_model_euronext.pkl\n"
+      "Model saved to models/knn_model_euronext.pkl\n",
+      "Model saved to models/knn_model_euronext.pkl\n"
      ]
     }
    ],
@@ -407,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "4a80dcfd",
    "metadata": {},
    "outputs": [
@@ -451,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "47a5ad79",
    "metadata": {},
    "outputs": [
@@ -473,7 +489,7 @@
       "Confusion matrix:\n",
       " [[182 158]\n",
       " [251 169]]\n",
-      "Model saved to ..\\models\\decision_tree_model_euronext.pkl\n"
+      "Model saved to models/decision_tree_model_euronext.pkl\n"
      ]
     }
    ],
@@ -499,21 +515,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "d8f48946",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\markc\\anaconda3\\envs\\dsi_participant\\Lib\\site-packages\\xgboost\\core.py:158: UserWarning: [15:13:11] WARNING: D:\\bld\\xgboost-split_1737531311373\\work\\src\\learner.cc:740: \n",
-      "Parameters: { \"use_label_encoder\" } are not used.\n",
-      "\n",
-      "  warnings.warn(smsg, UserWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# XGBoost model using the trainer component\n",
     "trainer_xgb = XGBTrainer(features=features, n_estimators=100, max_depth=6, learning_rate=0.1)\n",
@@ -523,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "9051c35e",
    "metadata": {},
    "outputs": [
@@ -546,7 +551,7 @@
       " [[207 133]\n",
       " [258 162]]\n",
       "ROC AUC: 0.4932\n",
-      "Model saved to ..\\models\\xgb_model_euronext.pkl\n"
+      "Model saved to models/xgb_model_euronext.pkl\n"
      ]
     }
    ],
