feat: Add random classifier baseline comparison and metrics evaluation

--- a/indices/euronext.ipynb
+++ b/indices/euronext.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c8a85f65",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,6 @@
     "\n",
     "from pathlib import Path\n",
     "import sys\n",
-    "\n",
     "\n",
     "sys.path.append(str(Path('..').resolve()))\n",
     "from src.data_loader import load_data\n",
@@ -303,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e02669be",
    "metadata": {},
    "outputs": [
@@ -332,6 +331,7 @@
    ],
    "source": [
     "# Evaluate model\n",
+    "y_pred_lr = trainer_lr.predict(X_test)\n",
     "metrics = trainer_lr.evaluate(X_test, y_test)\n",
     "print(f'Accuracy: {metrics[\"accuracy\"]:.4f}')\n",
     "print('Classification report:\\n', metrics['classification_report'])\n",
@@ -349,7 +349,7 @@
    "id": "0ce3e06c",
    "metadata": {},
    "source": [
-    "## KNN"
+    "## 2.3. KNN"
    ]
   },
   {
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "6b4e070f",
    "metadata": {},
    "outputs": [
@@ -389,13 +389,13 @@
       "Confusion matrix:\n",
       " [[164 176]\n",
       " [227 193]]\n",
-      "Model saved to models/knn_model_euronext.pkl\n",
       "Model saved to models/knn_model_euronext.pkl\n"
      ]
     }
    ],
    "source": [
     "# Evaluate KNN model\n",
+    "y_pred_knn = trainer_knn.predict(X_test_knn)\n",
     "metrics_knn = trainer_knn.evaluate(X_test_knn, y_test_knn)\n",
     "print('Accuracy:', round(metrics_knn['accuracy'], 4))\n",
     "print('Classification report:\\n', metrics_knn['classification_report'])\n",
@@ -411,7 +411,7 @@
    "id": "c6842e11",
    "metadata": {},
    "source": [
-    "## Decision Tree"
+    "## 2.4. Decision Tree"
    ]
   },
   {
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "47a5ad79",
    "metadata": {},
    "outputs": [
@@ -488,6 +488,7 @@
    ],
    "source": [
     "# Evaluate Decision Tree model\n",
+    "y_pred_dt = trainer_dt.predict(X_test_dt)\n",
     "metrics_dt = trainer_dt.evaluate(X_test_dt, y_test_dt)\n",
     "print('Accuracy:', round(metrics_dt['accuracy'], 4))\n",
     "print('Classification report:\\n', metrics_dt['classification_report'])\n",
@@ -503,7 +504,7 @@
    "id": "50d6acbf",
    "metadata": {},
    "source": [
-    "# XGBoost"
+    "## 2.5. XGBoost"
    ]
   },
   {
@@ -521,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "9051c35e",
    "metadata": {},
    "outputs": [
@@ -550,6 +551,7 @@
    ],
    "source": [
     "# Evaluate XGBoost model\n",
+    "y_pred_xgb = trainer_xgb.predict(X_test_xgb)\n",
     "metrics_xgb = trainer_xgb.evaluate(X_test_xgb, y_test_xgb)\n",
     "print('Accuracy:', round(metrics_xgb['accuracy'], 4))\n",
     "print('Classification report:\\n', metrics_xgb['classification_report'])\n",
@@ -560,6 +562,108 @@
     "# Save model\n",
     "trainer_xgb.save(str(Path('..') / 'models' / 'xgb_model_euronext.pkl'))\n",
     "print(f'Model saved to models/xgb_model_euronext.pkl')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43937891",
+   "metadata": {},
+   "source": [
+    "# 3. Random Classifier Baseline Comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10d14bae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Performance Comparison vs Random Baseline\n",
+      "======================================================================\n",
+      "                     Accuracy  Precision  Recall  F1-Score  ROC AUC\n",
+      "Random                 0.5224     0.5718  0.5405    0.5557   0.5202\n",
+      "Logistic Regression    0.5434     0.5502  0.9524    0.6975   0.5088\n",
+      "KNN                    0.4697     0.5230  0.4595    0.4892   0.4627\n",
+      "Decision Tree          0.4618     0.5168  0.4024    0.4525   0.4712\n",
+      "XGBoost                0.4855     0.5492  0.3857    0.4531   0.4932\n",
+      "\n",
+      "\n",
+      "Improvement Over Random Classifier (in percentage points)\n",
+      "======================================================================\n",
+      "Logistic Regression : +2.11%\n",
+      "KNN                 : -5.26%\n",
+      "Decision Tree       : -6.05%\n",
+      "XGBoost             : -3.68%\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
+    "\n",
+    "# Generate random predictions \n",
+    "np.random.seed(42)\n",
+    "y_random = np.random.randint(0, 2, size=len(y_test))\n",
+    "\n",
+    "# Calculate metrics for random classifier\n",
+    "random_metrics = {\n",
+    "    'Accuracy': accuracy_score(y_test, y_random),\n",
+    "    'Precision': precision_score(y_test, y_random),\n",
+    "    'Recall': recall_score(y_test, y_random),\n",
+    "    'F1-Score': f1_score(y_test, y_random),\n",
+    "    'ROC AUC': roc_auc_score(y_test, y_random) if len(np.unique(y_random)) > 1 else None\n",
+    "}\n",
+    "\n",
+    "# Collect all model metrics for comparison (reusing predictions from evaluation cells)\n",
+    "comparison_data = {\n",
+    "    'Random': random_metrics,\n",
+    "    'Logistic Regression': {\n",
+    "        'Accuracy': metrics['accuracy'],\n",
+    "        'Precision': precision_score(y_test, y_pred_lr),\n",
+    "        'Recall': recall_score(y_test, y_pred_lr),\n",
+    "        'F1-Score': f1_score(y_test, y_pred_lr),\n",
+    "        'ROC AUC': metrics['roc_auc']\n",
+    "    },\n",
+    "    'KNN': {\n",
+    "        'Accuracy': metrics_knn['accuracy'],\n",
+    "        'Precision': precision_score(y_test_knn, y_pred_knn),\n",
+    "        'Recall': recall_score(y_test_knn, y_pred_knn),\n",
+    "        'F1-Score': f1_score(y_test_knn, y_pred_knn),\n",
+    "        'ROC AUC': metrics_knn['roc_auc']\n",
+    "    },\n",
+    "    'Decision Tree': {\n",
+    "        'Accuracy': metrics_dt['accuracy'],\n",
+    "        'Precision': precision_score(y_test_dt, y_pred_dt),\n",
+    "        'Recall': recall_score(y_test_dt, y_pred_dt),\n",
+    "        'F1-Score': f1_score(y_test_dt, y_pred_dt),\n",
+    "        'ROC AUC': metrics_dt['roc_auc']\n",
+    "    },\n",
+    "    'XGBoost': {\n",
+    "        'Accuracy': metrics_xgb['accuracy'],\n",
+    "        'Precision': precision_score(y_test_xgb, y_pred_xgb),\n",
+    "        'Recall': recall_score(y_test_xgb, y_pred_xgb),\n",
+    "        'F1-Score': f1_score(y_test_xgb, y_pred_xgb),\n",
+    "        'ROC AUC': metrics_xgb['roc_auc']\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "# Display comparison as DataFrame\n",
+    "comparison_df = pd.DataFrame(comparison_data).T\n",
+    "print(\"Model Performance Comparison vs Random Baseline\")\n",
+    "print(\"=\" * 70)\n",
+    "print(comparison_df.round(4))\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# Calculate improvement over random classifier\n",
+    "print(\"Improvement Over Random Classifier (in percentage points)\")\n",
+    "print(\"=\" * 70)\n",
+    "for model in ['Logistic Regression', 'KNN', 'Decision Tree', 'XGBoost']:\n",
+    "    improvement = (comparison_data[model]['Accuracy'] - comparison_data['Random']['Accuracy']) * 100\n",
+    "    print(f\"{model:20s}: {improvement:+.2f}%\")\n"
    ]
   }
  ],
