refactor: Update execution counts and improve random classifier comparison output

--- a/indices/euronext.ipynb
+++ b/indices/euronext.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "c8a85f65",
    "metadata": {},
    "outputs": [],
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "a3fa1980",
    "metadata": {},
    "outputs": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "a72fb7ad",
    "metadata": {},
    "outputs": [],
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "e02669be",
    "metadata": {},
    "outputs": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "d151aa5b",
    "metadata": {},
    "outputs": [],
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "6b4e070f",
    "metadata": {},
    "outputs": [
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "4a80dcfd",
    "metadata": {},
    "outputs": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "47a5ad79",
    "metadata": {},
    "outputs": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "d8f48946",
    "metadata": {},
    "outputs": [],
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "9051c35e",
    "metadata": {},
    "outputs": [
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "10d14bae",
    "metadata": {},
    "outputs": [
@@ -592,12 +592,12 @@
       "XGBoost                0.4855     0.5492  0.3857    0.4531   0.4932\n",
       "\n",
       "\n",
-      "Improvement Over Random Classifier (in percentage points)\n",
+      "Improvement Over Random Classifier (ROC AUC %)\n",
       "======================================================================\n",
-      "Logistic Regression : +2.11%\n",
-      "KNN                 : -5.26%\n",
-      "Decision Tree       : -6.05%\n",
-      "XGBoost             : -3.68%\n"
+      "Logistic Regression : -1.15%\n",
+      "KNN                 : -5.75%\n",
+      "Decision Tree       : -4.91%\n",
+      "XGBoost             : -2.71%\n"
      ]
     }
    ],
@@ -618,7 +618,7 @@
     "    'ROC AUC': roc_auc_score(y_test, y_random) if len(np.unique(y_random)) > 1 else None\n",
     "}\n",
     "\n",
-    "# Collect all model metrics for comparison (reusing predictions from evaluation cells)\n",
+    "# Collect all model metrics for comparison \n",
     "comparison_data = {\n",
     "    'Random': random_metrics,\n",
     "    'Logistic Regression': {\n",
@@ -659,10 +659,10 @@
     "print(\"\\n\")\n",
     "\n",
     "# Calculate improvement over random classifier\n",
-    "print(\"Improvement Over Random Classifier (in percentage points)\")\n",
+    "print(\"Improvement Over Random Classifier (ROC AUC %)\")\n",
     "print(\"=\" * 70)\n",
     "for model in ['Logistic Regression', 'KNN', 'Decision Tree', 'XGBoost']:\n",
-    "    improvement = (comparison_data[model]['Accuracy'] - comparison_data['Random']['Accuracy']) * 100\n",
+    "    improvement = (comparison_data[model]['ROC AUC'] - comparison_data['Random']['ROC AUC']) * 100\n",
     "    print(f\"{model:20s}: {improvement:+.2f}%\")\n"
    ]
   }
